# roogle-index

./: config.toml.patch
.github/actions/build-rustc/: action.yml
.github/workflows/: indexer.yml
ci/: config.toml.patch
ci/scripts/: libstd.sh  rustc.py
crate/: ahash.json  ansi_term.json  anyhow.json  arrayvec.json  atty.json  autocfg.json  backtrace.json  base64.json  bitflags.json  byteorder.json  bytes.json  cc.json  chrono.json  clap.json  clap_lex.json  cpufeatures.json  digest.json  either.json  env_logger.json  errno.json  fastrand.json  fnv.json  futures.json  getrandom.json  h2.json  hashbrown.json  heck.json  http.json  httparse.json  humantime.json  hyper.json  idna.json  indexmap.json  itertools.json  itoa.json  lazy_static.json  libc.json  lock_api.json  log.json  matches.json  (+105 more)
indexer/: Cargo.toml
indexer/src/: lib.rs
set/: crates.json  rustc.json
