[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crates_io_api = { version = "0.8.0", default-features = false, features = ["rustls"] }
flate2 = "1.0.22" 
futures = "0.3.17"
glob = "0.3.0"
reqwest = { version = "0.11.6", default-features = false, features = [ "rustls-tls" ] }
serde_json = "1.0"
tar = "0.4.37"
tempdir = "0.3.7"
tokio = { version = "1.13.0", features = ["full"] }
